--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,19 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+jar {
+    dependsOn configurations.runtime
+    from {
+        (configurations.runtime).collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    } {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
+    manifest {
+        attributes 'Main-Class': 'fr.expertsystem.Main'
+    }
+}
